# camunda-external-task-client-python3

./: Jenkinsfile  pyproject.toml  requirements.txt  setup.cfg  tox.ini
bpmn_processes/: async_handler.bpmn  file_handler.bpmn  variable_handler.bpmn
camunda/: __init__.py
camunda/client/: async_external_task_client.py
camunda/external_task/: async_external_task_executor.py  async_external_task_worker.py  file_utils.py
examples/: async_handler.py  file_handler.py  variable_handler.py
